--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "antd": "^4.23.4",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0"
   },
